# ABY

./: 1203.md  MPC_math.h  README.md  mynote.md  note.md  note0.md  note1.md  papernote.md  report.md  usage.md
Application/: MPC_math_example.cpp  MPC_math_example_org.cpp  example  example.cpp
Experimental_data/: comparison.xlsx  report.md  statistics.xlsx
MPC_math/: CMakeLists.txt  MPC_math.cpp  MPC_math.h  MPC_math_example.cpp  MPC_math_test.cpp  MPC_math_verification.cpp  calculateVAR.cpp  math_test.cpp  統計.xlsx
MPC_math/practiceABY/: abyguidenote.md
MPC_math/practiceABY/common/: project_2.h
SHR/: CMakeLists.txt  SHR_test.cpp
SHR/common/: SHR.cpp  SHR.h
SIMD_Optimization/: fixedkeySIMD.h  fixedkeyorigin.h
Verification/: table  table.cpp  test.cpp
Verification/aby/: ceil_0.txt  cos_0.txt  cosh_0.txt  exp_0.txt  fabs_0.txt  fmod_0.txt  modf_0.txt  pow_0.txt  sinh_0.txt  sqrt_0.txt  tan_0.txt
Verification/correct/: abs_0.txt  cosh_0.txt  exp_0.txt  floor_0.txt  fmod_0.txt  modf_0.txt  pow_0.txt  sin_0.txt  sinh_0.txt  sqrt_0.txt  tanh_0.txt
practiceABY/: report.md
project_2/: CMakeLists.txt  project_2_test.cpp
project_2/common/: project_2.cpp
